--- a/css/main.css
+++ b/css/main.css
@@ -574,10 +574,6 @@ video {
   }
 }
 
-.static {
-  position: static;
-}
-
 .fixed {
   position: fixed;
 }
@@ -622,10 +618,6 @@ video {
   z-index: 50;
 }
 
-.z-\[\] {
-  z-index: ;
-}
-
 .z-\[1000\] {
   z-index: 1000;
 }
@@ -659,6 +651,15 @@ video {
   margin-right: auto;
 }
 
+.my-3 {
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+}
+
+.-mt-\[120px\] {
+  margin-top: -120px;
+}
+
 .mb-2 {
   margin-bottom: 0.5rem;
 }
@@ -687,28 +688,8 @@ video {
   margin-top: 2.5rem;
 }
 
-.mt-2 {
-  margin-top: 0.5rem;
-}
-
 .mt-5 {
   margin-top: 1.25rem;
-}
-
-.mt-\[20\] {
-  margin-top: 20;
-}
-
-.mt-\[\] {
-  margin-top: ;
-}
-
-.mt-\[80\] {
-  margin-top: 80;
-}
-
-.mt-\[80px\] {
-  margin-top: 80px;
 }
 
 .block {
@@ -739,6 +720,10 @@ video {
   height: 100vh;
 }
 
+.h-\[1400px\] {
+  height: 1400px;
+}
+
 .h-\[150px\] {
   height: 150px;
 }
@@ -755,6 +740,10 @@ video {
   height: 50px;
 }
 
+.h-\[50vh\] {
+  height: 50vh;
+}
+
 .h-\[60\%\] {
   height: 60%;
 }
@@ -763,56 +752,16 @@ video {
   height: 100%;
 }
 
-.h-\[\] {
-  height: ;
-}
-
-.h-\[700px\] {
-  height: 700px;
-}
-
-.h-\[full\] {
-  height: full;
-}
-
-.h-\[100\] {
-  height: 100;
-}
-
-.h-\[1000px\] {
-  height: 1000px;
-}
-
-.h-\[00px\] {
-  height: 00px;
-}
-
-.h-\[900px\] {
-  height: 900px;
-}
-
-.h-\[100px\] {
-  height: 100px;
-}
-
-.h-\[120px\] {
-  height: 120px;
-}
-
-.h-\[1200px\] {
-  height: 1200px;
-}
-
-.h-\[1500px\] {
-  height: 1500px;
-}
-
-.h-\[1400px\] {
-  height: 1400px;
+.h-\[30px\] {
+  height: 30px;
 }
 
 .w-20 {
   width: 5rem;
+}
+
+.w-\[100px\] {
+  width: 100px;
 }
 
 .w-\[20\%\] {
@@ -855,6 +804,10 @@ video {
   align-items: center;
 }
 
+.justify-end {
+  justify-content: flex-end;
+}
+
 .justify-center {
   justify-content: center;
 }
@@ -889,6 +842,10 @@ video {
   overflow: hidden;
 }
 
+.overflow-scroll {
+  overflow: scroll;
+}
+
 .rounded-2xl {
   border-radius: 1rem;
 }
@@ -906,6 +863,11 @@ video {
   border-bottom-left-radius: 9999px;
 }
 
+.rounded-l-lg {
+  border-top-left-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+}
+
 .border {
   border-width: 1px;
 }
@@ -916,10 +878,6 @@ video {
 
 .border-b-0 {
   border-bottom-width: 0px;
-}
-
-.border-b-2 {
-  border-bottom-width: 2px;
 }
 
 .border-b-4 {
@@ -958,6 +916,10 @@ video {
   border-style: solid;
 }
 
+.border-none {
+  border-style: none;
+}
+
 .border-color-primary {
   --tw-border-opacity: 1;
   border-color: rgb(31 143 124 / var(--tw-border-opacity));
@@ -968,14 +930,14 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
+.border-gray-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+
 .border-b-color-primary {
   --tw-border-opacity: 1;
   border-bottom-color: rgb(31 143 124 / var(--tw-border-opacity));
-}
-
-.border-b-gray-300 {
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
 .border-b-white {
@@ -1012,19 +974,34 @@ video {
   background-color: rgb(31 143 124 / var(--tw-bg-opacity));
 }
 
+.bg-gray-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
+.bg-gray-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
+
 .bg-gray-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }
 
-.bg-green-700 {
+.bg-purple-100 {
   --tw-bg-opacity: 1;
-  background-color: rgb(21 128 61 / var(--tw-bg-opacity));
+  background-color: rgb(243 232 255 / var(--tw-bg-opacity));
 }
 
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
 .bg-cover {
@@ -1051,6 +1028,10 @@ video {
   padding: 0.75rem;
 }
 
+.p-4 {
+  padding: 1rem;
+}
+
 .p-5 {
   padding: 1.25rem;
 }
@@ -1058,6 +1039,11 @@ video {
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
+}
+
+.px-20 {
+  padding-left: 5rem;
+  padding-right: 5rem;
 }
 
 .px-4 {
@@ -1095,52 +1081,12 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
-.py-0 {
-  padding-top: 0px;
-  padding-bottom: 0px;
-}
-
-.py-\[\] {
-  padding-top: ;
-  padding-bottom: ;
-}
-
-.py-\[199p\] {
-  padding-top: 199p;
-  padding-bottom: 199p;
-}
-
-.py-\[19p\] {
-  padding-top: 19p;
-  padding-bottom: 19p;
-}
-
-.py-\[159p\] {
-  padding-top: 159p;
-  padding-bottom: 159p;
-}
-
-.py-\[150p\] {
-  padding-top: 150p;
-  padding-bottom: 150p;
-}
-
-.py-\[150px\] {
-  padding-top: 150px;
-  padding-bottom: 150px;
-}
-
-.pb-10 {
-  padding-bottom: 2.5rem;
-}
-
 .pl-11 {
   padding-left: 2.75rem;
+}
+
+.pl-4 {
+  padding-left: 1rem;
 }
 
 .pl-5 {
@@ -1149,10 +1095,6 @@ video {
 
 .pr-11 {
   padding-right: 2.75rem;
-}
-
-.pt-20 {
-  padding-top: 5rem;
 }
 
 .text-left {
@@ -1237,6 +1179,11 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
+.text-color-primary {
+  --tw-text-opacity: 1;
+  color: rgb(31 143 124 / var(--tw-text-opacity));
+}
+
 .text-color-secondary {
   --tw-text-opacity: 1;
   color: rgb(2 75 51 / var(--tw-text-opacity));
@@ -1247,9 +1194,19 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-gray-200 {
+.text-gray-400 {
   --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+.text-gray-700 {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
+.text-gray-800 {
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 
 .text-gray-900 {
@@ -1262,14 +1219,18 @@ video {
   color: rgb(3 7 18 / var(--tw-text-opacity));
 }
 
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .text-yellow-500 {
   --tw-text-opacity: 1;
   color: rgb(234 179 8 / var(--tw-text-opacity));
 }
 
-.text-color-primary {
-  --tw-text-opacity: 1;
-  color: rgb(31 143 124 / var(--tw-text-opacity));
+.opacity-50 {
+  opacity: 0.5;
 }
 
 .shadow-lg {
@@ -1278,19 +1239,9 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-gray-500 {
-  --tw-shadow-color: #6b7280;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
-}
-
-.drop-shadow-lg {
-  --tw-drop-shadow: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .duration-200 {
@@ -1321,32 +1272,33 @@ video {
   position: relative;
 }
 
-.my-slide {
-  width: 100%;
-  height: 100%;
-  display: none;
-  float: left;
-}
+/* .my-slide {
+    width: 100%;
+    height: 100%;
+   
+    display: none;
+    float: left;
+  }
 
-.my-slide.active {
-  display: block;
-}
+  .my-slide.active {
+    display: block;
+  }
 
-.my-pagination {
-  text-align: center;
-  margin-top: 10px;
-}
+  .my-pagination {
+    text-align: center;
+    margin-top: 10px;
+  }
 
-.my-pagination button {
-  background-color: #333;
-  color: #fff;
-  border: none;
-  border-radius: 50%;
-  width: 20px;
-  height: 20px;
-  margin: 0 5px;
-  cursor: pointer;
-}
+  .my-pagination button {
+    background-color: #333;
+    color: #fff;
+    border: none;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    margin: 0 5px;
+    cursor: pointer;
+  } */
 
 .carousel-container {
   width: 100%;
@@ -1534,6 +1486,11 @@ swiper-container-3d swiper-slide-shadow-left,
   background-color: rgba(0,0,0,0.7);
 }
 
+.hover\:bg-gray-100:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-gray-800:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
@@ -1604,6 +1561,10 @@ swiper-container-3d swiper-slide-shadow-left,
     margin-top: 200px;
   }
 
+  .lg\:ml-20 {
+    margin-left: 5rem;
+  }
+
   .lg\:block {
     display: block;
   }
@@ -1616,12 +1577,8 @@ swiper-container-3d swiper-slide-shadow-left,
     display: none;
   }
 
-  .lg\:h-\[700px\] {
-    height: 700px;
-  }
-
-  .lg\:h-\[00px\] {
-    height: 00px;
+  .lg\:h-\[75vh\] {
+    height: 75vh;
   }
 
   .lg\:h-\[900px\] {
@@ -1642,6 +1599,26 @@ swiper-container-3d swiper-slide-shadow-left,
 
   .lg\:w-\[80\%\] {
     width: 80%;
+  }
+
+  .lg\:w-\[\%\] {
+    width: %;
+  }
+
+  .lg\:w-\[70\%\] {
+    width: 70%;
+  }
+
+  .lg\:w-\[90\%\] {
+    width: 90%;
+  }
+
+  .lg\:w-\[100\%\] {
+    width: 100%;
+  }
+
+  .lg\:w-\[0\%\] {
+    width: 0%;
   }
 
   .lg\:grid-cols-2 {
@@ -1687,10 +1664,6 @@ swiper-container-3d swiper-slide-shadow-left,
     padding-bottom: 0px;
   }
 
-  .lg\:text-right {
-    text-align: right;
-  }
-
   .lg\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
@@ -1699,6 +1672,11 @@ swiper-container-3d swiper-slide-shadow-left,
   .lg\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .lg\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 }
 
