--- a/input.css
+++ b/input.css
@@ -22,8 +22,9 @@
     overflow: hidden;
     position: relative;
   }
+  
 
-  .my-slide {
+  /* .my-slide {
     width: 100%;
     height: 100%;
    
@@ -49,7 +50,7 @@
     height: 20px;
     margin: 0 5px;
     cursor: pointer;
-  }
+  } */
 .carousel-container {
     width: 100%;
     overflow: hidden;
