--- a/css/main.css
+++ b/css/main.css
@@ -638,10 +638,6 @@ video {
   z-index: 10;
 }
 
-.z-\[150\] {
-  z-index: 150;
-}
-
 .col-span-1 {
   grid-column: span 1 / span 1;
 }
@@ -662,6 +658,10 @@ video {
   margin: auto;
 }
 
+.m-\[150px\] {
+  margin: 150px;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -680,6 +680,16 @@ video {
 .my-\[200px\] {
   margin-top: 200px;
   margin-bottom: 200px;
+}
+
+.my-\[150px\] {
+  margin-top: 150px;
+  margin-bottom: 150px;
+}
+
+.my-32 {
+  margin-top: 8rem;
+  margin-bottom: 8rem;
 }
 
 .-ml-\[1\.5rem\] {
@@ -790,6 +800,86 @@ video {
   margin-top: 200px;
 }
 
+.mb-\[100px\] {
+  margin-bottom: 100px;
+}
+
+.-mt-\[150px\] {
+  margin-top: -150px;
+}
+
+.mt-0 {
+  margin-top: 0px;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
+.-mt-\[0px\] {
+  margin-top: -0px;
+}
+
+.-mt-\[200px\] {
+  margin-top: -200px;
+}
+
+.mt-20 {
+  margin-top: 5rem;
+}
+
+.mt-\[\] {
+  margin-top: ;
+}
+
+.mt-\[150px\] {
+  margin-top: 150px;
+}
+
+.mb-\[\] {
+  margin-bottom: ;
+}
+
+.mb-\[200p\] {
+  margin-bottom: 200p;
+}
+
+.mb-\[200px\] {
+  margin-bottom: 200px;
+}
+
+.mb-\[150px\] {
+  margin-bottom: 150px;
+}
+
+.mb-\[250px\] {
+  margin-bottom: 250px;
+}
+
+.mt-\[150\] {
+  margin-top: 150;
+}
+
+.mt-\[160px\] {
+  margin-top: 160px;
+}
+
+.mt-\[170px\] {
+  margin-top: 170px;
+}
+
+.mt-\[0px\] {
+  margin-top: 0px;
+}
+
+.-mt-\[250px\] {
+  margin-top: -250px;
+}
+
+.mt-32 {
+  margin-top: 8rem;
+}
+
 .block {
   display: block;
 }
@@ -886,12 +976,52 @@ video {
   height: 100%;
 }
 
+.h-\[75vh\] {
+  height: 75vh;
+}
+
+.h-\[100px\] {
+  height: 100px;
+}
+
+.h-\[1600px\] {
+  height: 1600px;
+}
+
+.h-\[1500px\] {
+  height: 1500px;
+}
+
+.h-\[\] {
+  height: ;
+}
+
+.h-\[70\%\] {
+  height: 70%;
+}
+
+.h-\[200px\] {
+  height: 200px;
+}
+
+.h-\[250px\] {
+  height: 250px;
+}
+
+.max-h-full {
+  max-height: 100%;
+}
+
 .min-h-\[1\.5rem\] {
   min-height: 1.5rem;
 }
 
 .min-h-\[auto\] {
   min-height: auto;
+}
+
+.min-h-full {
+  min-height: 100%;
 }
 
 .w-20 {
@@ -948,6 +1078,34 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-\[40\%\] {
+  width: 40%;
+}
+
+.w-\[45\%\] {
+  width: 45%;
+}
+
+.w-\[43\%\] {
+  width: 43%;
+}
+
+.w-\[42\%\] {
+  width: 42%;
+}
+
+.w-\[41\%\] {
+  width: 41%;
+}
+
+.w-\[70\%\] {
+  width: 70%;
+}
+
+.w-\[68\%\] {
+  width: 68%;
 }
 
 .max-w-\[90\%\] {
@@ -1209,6 +1367,11 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
+.border-gray-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(75 85 99 / var(--tw-border-opacity));
+}
+
 .border-b-color-primary {
   --tw-border-opacity: 1;
   border-bottom-color: rgb(31 143 124 / var(--tw-border-opacity));
@@ -1294,6 +1457,36 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-slate-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
+}
+
+.bg-red-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
+}
+
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.bg-blue-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
+}
+
+.bg-gray-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+}
+
+.bg-green-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
 }
 
 .bg-cover {
@@ -1404,6 +1597,21 @@ video {
 .py-\[0\.32rem\] {
   padding-top: 0.32rem;
   padding-bottom: 0.32rem;
+}
+
+.py-\[150px\] {
+  padding-top: 150px;
+  padding-bottom: 150px;
+}
+
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
+.py-32 {
+  padding-top: 8rem;
+  padding-bottom: 8rem;
 }
 
 .pb-10 {
@@ -1542,6 +1750,14 @@ video {
   line-height: 1.25;
 }
 
+.leading-5 {
+  line-height: 1.25rem;
+}
+
+.leading-10 {
+  line-height: 2.5rem;
+}
+
 .tracking-wider {
   letter-spacing: 0.05em;
 }
@@ -1656,8 +1872,21 @@ video {
   color: rgb(234 179 8 / var(--tw-text-opacity));
 }
 
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
 .opacity-50 {
   opacity: 0.5;
+}
+
+.opacity-0 {
+  opacity: 0;
+}
+
+.opacity-100 {
+  opacity: 1;
 }
 
 .shadow {
@@ -2122,6 +2351,11 @@ swiper-container-3d swiper-slide-shadow-left,
   background-color: rgb(134 239 172 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-blue-500:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
 .hover\:text-color-primary:hover {
   --tw-text-opacity: 1;
   color: rgb(31 143 124 / var(--tw-text-opacity));
@@ -2427,6 +2661,11 @@ swiper-container-3d swiper-slide-shadow-left,
     color: rgb(254 240 138 / var(--tw-text-opacity));
   }
 
+  .dark\:text-black {
+    --tw-text-opacity: 1;
+    color: rgb(0 0 0 / var(--tw-text-opacity));
+  }
+
   .dark\:shadow-\[0_4px_9px_-4px_rgba\(59\2c 113\2c 202\2c 0\.5\)\] {
     --tw-shadow: 0 4px 9px -4px rgba(59,113,202,0.5);
     --tw-shadow-colored: 0 4px 9px -4px var(--tw-shadow-color);
@@ -2505,6 +2744,30 @@ swiper-container-3d swiper-slide-shadow-left,
     margin-top: 150px;
   }
 
+  .sm\:hidden {
+    display: none;
+  }
+
+  .sm\:w-\[42\%\] {
+    width: 42%;
+  }
+
+  .sm\:w-\[40\%\] {
+    width: 40%;
+  }
+
+  .sm\:w-\[\%\] {
+    width: %;
+  }
+
+  .sm\:w-\[37\%\] {
+    width: 37%;
+  }
+
+  .sm\:w-\[35\%\] {
+    width: 35%;
+  }
+
   .sm\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
@@ -2523,6 +2786,10 @@ swiper-container-3d swiper-slide-shadow-left,
 
   .md\:mb-2 {
     margin-bottom: 0.5rem;
+  }
+
+  .md\:mt-10 {
+    margin-top: 2.5rem;
   }
 
   .md\:block {
@@ -2551,6 +2818,30 @@ swiper-container-3d swiper-slide-shadow-left,
 
   .md\:w-full {
     width: 100%;
+  }
+
+  .md\:w-\[42\%\] {
+    width: 42%;
+  }
+
+  .md\:w-\[\%\] {
+    width: %;
+  }
+
+  .md\:w-\[30\%\] {
+    width: 30%;
+  }
+
+  .md\:w-\[20\%\] {
+    width: 20%;
+  }
+
+  .md\:w-\[50\%\] {
+    width: 50%;
+  }
+
+  .md\:w-\[500\%\] {
+    width: 500%;
   }
 
   .md\:grid-cols-2 {
@@ -2595,6 +2886,11 @@ swiper-container-3d swiper-slide-shadow-left,
     grid-column: span 1 / span 1;
   }
 
+  .lg\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
   .lg\:-ml-\[50px\] {
     margin-left: -50px;
   }
@@ -2621,6 +2917,18 @@ swiper-container-3d swiper-slide-shadow-left,
 
   .lg\:mt-\[200px\] {
     margin-top: 200px;
+  }
+
+  .lg\:mb-5 {
+    margin-bottom: 1.25rem;
+  }
+
+  .lg\:-mt-\[120px\] {
+    margin-top: -120px;
+  }
+
+  .lg\:mt-0 {
+    margin-top: 0px;
   }
 
   .lg\:block {
@@ -2676,6 +2984,22 @@ swiper-container-3d swiper-slide-shadow-left,
   }
 
   .lg\:w-full {
+    width: 100%;
+  }
+
+  .lg\:w-\[30\%\] {
+    width: 30%;
+  }
+
+  .lg\:w-\[70\%\] {
+    width: 70%;
+  }
+
+  .lg\:w-\[90\%\] {
+    width: 90%;
+  }
+
+  .lg\:w-\[100\%\] {
     width: 100%;
   }
 
@@ -2757,6 +3081,11 @@ swiper-container-3d swiper-slide-shadow-left,
   .lg\:py-12 {
     padding-top: 3rem;
     padding-bottom: 3rem;
+  }
+
+  .lg\:px-20 {
+    padding-left: 5rem;
+    padding-right: 5rem;
   }
 
   .lg\:pb-0 {
