--- a/css/main.css
+++ b/css/main.css
@@ -658,10 +658,6 @@ video {
   margin: auto;
 }
 
-.m-\[150px\] {
-  margin: 150px;
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -682,16 +678,6 @@ video {
   margin-bottom: 200px;
 }
 
-.my-\[150px\] {
-  margin-top: 150px;
-  margin-bottom: 150px;
-}
-
-.my-32 {
-  margin-top: 8rem;
-  margin-bottom: 8rem;
-}
-
 .-ml-\[1\.5rem\] {
   margin-left: -1.5rem;
 }
@@ -700,8 +686,8 @@ video {
   margin-top: -100px;
 }
 
-.-mt-\[120px\] {
-  margin-top: -120px;
+.-mt-\[250px\] {
+  margin-top: -250px;
 }
 
 .-mt-\[75px\] {
@@ -748,6 +734,14 @@ video {
   margin-bottom: 2rem;
 }
 
+.mb-\[100px\] {
+  margin-bottom: 100px;
+}
+
+.mb-\[250px\] {
+  margin-bottom: 250px;
+}
+
 .ml-0 {
   margin-left: 0px;
 }
@@ -792,92 +786,12 @@ video {
   margin-top: 0.15rem;
 }
 
-.mt-\[130px\] {
-  margin-top: 130px;
-}
-
 .mt-\[200px\] {
   margin-top: 200px;
 }
 
-.mb-\[100px\] {
-  margin-bottom: 100px;
-}
-
-.-mt-\[150px\] {
-  margin-top: -150px;
-}
-
-.mt-0 {
-  margin-top: 0px;
-}
-
-.mb-10 {
-  margin-bottom: 2.5rem;
-}
-
-.-mt-\[0px\] {
-  margin-top: -0px;
-}
-
-.-mt-\[200px\] {
-  margin-top: -200px;
-}
-
 .mt-20 {
   margin-top: 5rem;
-}
-
-.mt-\[\] {
-  margin-top: ;
-}
-
-.mt-\[150px\] {
-  margin-top: 150px;
-}
-
-.mb-\[\] {
-  margin-bottom: ;
-}
-
-.mb-\[200p\] {
-  margin-bottom: 200p;
-}
-
-.mb-\[200px\] {
-  margin-bottom: 200px;
-}
-
-.mb-\[150px\] {
-  margin-bottom: 150px;
-}
-
-.mb-\[250px\] {
-  margin-bottom: 250px;
-}
-
-.mt-\[150\] {
-  margin-top: 150;
-}
-
-.mt-\[160px\] {
-  margin-top: 160px;
-}
-
-.mt-\[170px\] {
-  margin-top: 170px;
-}
-
-.mt-\[0px\] {
-  margin-top: 0px;
-}
-
-.-mt-\[250px\] {
-  margin-top: -250px;
-}
-
-.mt-32 {
-  margin-top: 8rem;
 }
 
 .block {
@@ -896,6 +810,10 @@ video {
   display: inline-flex;
 }
 
+.table {
+  display: table;
+}
+
 .grid {
   display: grid;
 }
@@ -906,18 +824,6 @@ video {
 
 .h-24 {
   height: 6rem;
-}
-
-.h-3 {
-  height: 0.75rem;
-}
-
-.h-3\.5 {
-  height: 0.875rem;
-}
-
-.h-4 {
-  height: 1rem;
 }
 
 .h-5 {
@@ -940,8 +846,16 @@ video {
   height: 1400px;
 }
 
+.h-\[1500px\] {
+  height: 1500px;
+}
+
 .h-\[150px\] {
   height: 150px;
+}
+
+.h-\[200px\] {
+  height: 200px;
 }
 
 .h-\[300px\] {
@@ -976,42 +890,6 @@ video {
   height: 100%;
 }
 
-.h-\[75vh\] {
-  height: 75vh;
-}
-
-.h-\[100px\] {
-  height: 100px;
-}
-
-.h-\[1600px\] {
-  height: 1600px;
-}
-
-.h-\[1500px\] {
-  height: 1500px;
-}
-
-.h-\[\] {
-  height: ;
-}
-
-.h-\[70\%\] {
-  height: 70%;
-}
-
-.h-\[200px\] {
-  height: 200px;
-}
-
-.h-\[250px\] {
-  height: 250px;
-}
-
-.max-h-full {
-  max-height: 100%;
-}
-
 .min-h-\[1\.5rem\] {
   min-height: 1.5rem;
 }
@@ -1020,24 +898,8 @@ video {
   min-height: auto;
 }
 
-.min-h-full {
-  min-height: 100%;
-}
-
 .w-20 {
   width: 5rem;
-}
-
-.w-3 {
-  width: 0.75rem;
-}
-
-.w-3\.5 {
-  width: 0.875rem;
-}
-
-.w-4 {
-  width: 1rem;
 }
 
 .w-5 {
@@ -1064,12 +926,16 @@ video {
   width: 20%;
 }
 
-.w-\[30\%\] {
-  width: 30%;
+.w-\[40\%\] {
+  width: 40%;
 }
 
 .w-\[50\%\] {
   width: 50%;
+}
+
+.w-\[68\%\] {
+  width: 68%;
 }
 
 .w-\[80\%\] {
@@ -1078,34 +944,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-\[40\%\] {
-  width: 40%;
-}
-
-.w-\[45\%\] {
-  width: 45%;
-}
-
-.w-\[43\%\] {
-  width: 43%;
-}
-
-.w-\[42\%\] {
-  width: 42%;
-}
-
-.w-\[41\%\] {
-  width: 41%;
-}
-
-.w-\[70\%\] {
-  width: 70%;
-}
-
-.w-\[68\%\] {
-  width: 68%;
 }
 
 .max-w-\[90\%\] {
@@ -1146,10 +984,6 @@ video {
 
 .cursor-pointer {
   cursor: pointer;
-}
-
-.list-inside {
-  list-style-position: inside;
 }
 
 .appearance-none {
@@ -1291,10 +1125,6 @@ video {
   border-width: 1px;
 }
 
-.border-0 {
-  border-width: 0px;
-}
-
 .border-2 {
   border-width: 2px;
 }
@@ -1367,11 +1197,6 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
-.border-gray-600 {
-  --tw-border-opacity: 1;
-  border-color: rgb(75 85 99 / var(--tw-border-opacity));
-}
-
 .border-b-color-primary {
   --tw-border-opacity: 1;
   border-bottom-color: rgb(31 143 124 / var(--tw-border-opacity));
@@ -1404,6 +1229,11 @@ video {
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-blue-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
 }
 
 .bg-blue-600 {
@@ -1450,6 +1280,11 @@ video {
   background-color: rgb(243 232 255 / var(--tw-bg-opacity));
 }
 
+.bg-slate-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
+}
+
 .bg-transparent {
   background-color: transparent;
 }
@@ -1457,36 +1292,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-slate-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
-}
-
-.bg-red-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
-}
-
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
-}
-
-.bg-blue-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
-}
-
-.bg-gray-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
-}
-
-.bg-green-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
 }
 
 .bg-cover {
@@ -1534,16 +1339,6 @@ video {
   padding-right: 2.5rem;
 }
 
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.px-20 {
-  padding-left: 5rem;
-  padding-right: 5rem;
-}
-
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -1562,6 +1357,11 @@ video {
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+}
+
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
 }
 
 .py-12 {
@@ -1597,21 +1397,6 @@ video {
 .py-\[0\.32rem\] {
   padding-top: 0.32rem;
   padding-bottom: 0.32rem;
-}
-
-.py-\[150px\] {
-  padding-top: 150px;
-  padding-bottom: 150px;
-}
-
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-
-.py-32 {
-  padding-top: 8rem;
-  padding-bottom: 8rem;
 }
 
 .pb-10 {
@@ -1730,6 +1515,10 @@ video {
   text-transform: uppercase;
 }
 
+.leading-10 {
+  line-height: 2.5rem;
+}
+
 .leading-4 {
   line-height: 1rem;
 }
@@ -1748,14 +1537,6 @@ video {
 
 .leading-tight {
   line-height: 1.25;
-}
-
-.leading-5 {
-  line-height: 1.25rem;
-}
-
-.leading-10 {
-  line-height: 2.5rem;
 }
 
 .tracking-wider {
@@ -1817,6 +1598,11 @@ video {
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
 .text-gray-700 {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
@@ -1872,21 +1658,8 @@ video {
   color: rgb(234 179 8 / var(--tw-text-opacity));
 }
 
-.text-gray-500 {
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-
 .opacity-50 {
   opacity: 0.5;
-}
-
-.opacity-0 {
-  opacity: 0;
-}
-
-.opacity-100 {
-  opacity: 1;
 }
 
 .shadow {
@@ -2331,6 +2104,11 @@ swiper-container-3d swiper-slide-shadow-left,
   background-color: rgba(0,0,0,0.7);
 }
 
+.hover\:bg-blue-500:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-color-primary:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(31 143 124 / var(--tw-bg-opacity));
@@ -2349,11 +2127,6 @@ swiper-container-3d swiper-slide-shadow-left,
 .hover\:bg-green-300:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(134 239 172 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-blue-500:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
 }
 
 .hover\:text-color-primary:hover {
@@ -2661,11 +2434,6 @@ swiper-container-3d swiper-slide-shadow-left,
     color: rgb(254 240 138 / var(--tw-text-opacity));
   }
 
-  .dark\:text-black {
-    --tw-text-opacity: 1;
-    color: rgb(0 0 0 / var(--tw-text-opacity));
-  }
-
   .dark\:shadow-\[0_4px_9px_-4px_rgba\(59\2c 113\2c 202\2c 0\.5\)\] {
     --tw-shadow: 0 4px 9px -4px rgba(59,113,202,0.5);
     --tw-shadow-colored: 0 4px 9px -4px var(--tw-shadow-color);
@@ -2736,32 +2504,8 @@ swiper-container-3d swiper-slide-shadow-left,
 }
 
 @media (min-width: 640px) {
-  .sm\:mb-10 {
-    margin-bottom: 2.5rem;
-  }
-
   .sm\:mt-\[150px\] {
     margin-top: 150px;
-  }
-
-  .sm\:hidden {
-    display: none;
-  }
-
-  .sm\:w-\[42\%\] {
-    width: 42%;
-  }
-
-  .sm\:w-\[40\%\] {
-    width: 40%;
-  }
-
-  .sm\:w-\[\%\] {
-    width: %;
-  }
-
-  .sm\:w-\[37\%\] {
-    width: 37%;
   }
 
   .sm\:w-\[35\%\] {
@@ -2788,10 +2532,6 @@ swiper-container-3d swiper-slide-shadow-left,
     margin-bottom: 0.5rem;
   }
 
-  .md\:mt-10 {
-    margin-top: 2.5rem;
-  }
-
   .md\:block {
     display: block;
   }
@@ -2812,26 +2552,6 @@ swiper-container-3d swiper-slide-shadow-left,
     width: 50%;
   }
 
-  .md\:w-\[70\%\] {
-    width: 70%;
-  }
-
-  .md\:w-full {
-    width: 100%;
-  }
-
-  .md\:w-\[42\%\] {
-    width: 42%;
-  }
-
-  .md\:w-\[\%\] {
-    width: %;
-  }
-
-  .md\:w-\[30\%\] {
-    width: 30%;
-  }
-
   .md\:w-\[20\%\] {
     width: 20%;
   }
@@ -2840,8 +2560,12 @@ swiper-container-3d swiper-slide-shadow-left,
     width: 50%;
   }
 
-  .md\:w-\[500\%\] {
-    width: 500%;
+  .md\:w-\[70\%\] {
+    width: 70%;
+  }
+
+  .md\:w-full {
+    width: 100%;
   }
 
   .md\:grid-cols-2 {
@@ -2895,8 +2619,8 @@ swiper-container-3d swiper-slide-shadow-left,
     margin-left: -50px;
   }
 
-  .lg\:-mt-\[100px\] {
-    margin-top: -100px;
+  .lg\:-mt-\[120px\] {
+    margin-top: -120px;
   }
 
   .lg\:mb-0 {
@@ -2907,6 +2631,10 @@ swiper-container-3d swiper-slide-shadow-left,
     margin-bottom: 3rem;
   }
 
+  .lg\:mb-5 {
+    margin-bottom: 1.25rem;
+  }
+
   .lg\:ml-20 {
     margin-left: 5rem;
   }
@@ -2915,20 +2643,12 @@ swiper-container-3d swiper-slide-shadow-left,
     margin-left: 50px;
   }
 
-  .lg\:mt-\[200px\] {
-    margin-top: 200px;
-  }
-
-  .lg\:mb-5 {
-    margin-bottom: 1.25rem;
-  }
-
-  .lg\:-mt-\[120px\] {
-    margin-top: -120px;
-  }
-
   .lg\:mt-0 {
     margin-top: 0px;
+  }
+
+  .lg\:mt-\[200px\] {
+    margin-top: 200px;
   }
 
   .lg\:block {
@@ -2971,8 +2691,8 @@ swiper-container-3d swiper-slide-shadow-left,
     width: 58.333333%;
   }
 
-  .lg\:w-\[44\%\] {
-    width: 44%;
+  .lg\:w-\[30\%\] {
+    width: 30%;
   }
 
   .lg\:w-\[50\%\] {
@@ -2984,22 +2704,6 @@ swiper-container-3d swiper-slide-shadow-left,
   }
 
   .lg\:w-full {
-    width: 100%;
-  }
-
-  .lg\:w-\[30\%\] {
-    width: 30%;
-  }
-
-  .lg\:w-\[70\%\] {
-    width: 70%;
-  }
-
-  .lg\:w-\[90\%\] {
-    width: 90%;
-  }
-
-  .lg\:w-\[100\%\] {
     width: 100%;
   }
 
@@ -3063,6 +2767,11 @@ swiper-container-3d swiper-slide-shadow-left,
     padding-right: 0px;
   }
 
+  .lg\:px-20 {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+
   .lg\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
@@ -3081,11 +2790,6 @@ swiper-container-3d swiper-slide-shadow-left,
   .lg\:py-12 {
     padding-top: 3rem;
     padding-bottom: 3rem;
-  }
-
-  .lg\:px-20 {
-    padding-left: 5rem;
-    padding-right: 5rem;
   }
 
   .lg\:pb-0 {
@@ -3112,10 +2816,6 @@ swiper-container-3d swiper-slide-shadow-left,
 }
 
 @media (min-width: 1280px) {
-  .xl\:mb-12 {
-    margin-bottom: 3rem;
-  }
-
   .xl\:mr-20 {
     margin-right: 5rem;
   }
